# monorepo-example

./: Taskfile.yml
.github/configs/: labeler.yml
.github/workflows/: labeler.yml  test.yml
projects/base/: hello.py  pyproject.toml
projects/base/terraform/: .gitignore  backend.tf  main.tf  terraform.tfvars  variables.tf
projects/base/terraform/environments/dev/: backend.hcl  terraform.tfvars
projects/project_a/: pyproject.toml
projects/project_a/glue_jobs/example_job/: script.py
shared/package_a/: pyproject.toml  ruff.toml
shared/package_a/src/package_a/: module_a.py  module_b.py  module_c.py
