[project]
name = "project-a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "package-a",
]

[tool.uv.sources]
package-a = { git = "https://github.com/shuhei-suzuki-27/monorepo-example", subdirectory = "shared/package_a", branch = "main" }

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
